--- a/pom.xml
+++ b/pom.xml
@@ -108,5 +108,10 @@
             <artifactId>mybatis-spring</artifactId>
             <version>${org.mybatis-spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 </project>
