--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 server.port=8089
-security.user.name=admin
-security.user.password=123456
-management.security.enabled=true
-management.security.role=ADMIN
+security.basic.enabled=false
